# Guitares

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  _typos.toml  coverage.xml  ddb_environment.yml  gui_environment.yml  installation.txt  pyproject.toml  ra2ce_gui_env.yml  ruff.toml  setup.py  sonar-project.properties
.github/workflows/: publish-to-pypi.yml  sonar.yml  tests.yml
app/: Combinear.qss  RA2CEGUI.spec  logger.py  mapbox_map.py  ra2ce.ini  ra2ceGUI.yml  ra2ceGUI_base.py  run_ra2ceGUI.py
app/operations/: operations.py
app/server/: index.html  main.js
docs/: make.bat  requirements.txt
docs/source/: application_structure.rst  callbacks.rst  conf.py  configuration.rst  dependencies.rst  dialogs.rst  edit_mode.rst  elements.rst  examples.rst  getting_started.rst  guiobject.rst  index.rst  map.rst  mapbox.rst  menu.rst  popup_window.rst  positioning.rst  simple_example.rst  stylesheets.rst  tabpanels.rst  usage.rst  variables.rst
examples/calculator/: Combinear.qss  calc.py  calculator.py  calculator.yml  calculator_example.py  operations.py
examples/checkbox/: app.py  callbacks.py  checkbox.yml
examples/floodadapt/: fa.py  floodadapt.py  floodadapt_map.py
examples/frame_collapse/: app.py  callbacks.py  frame_collapse.py  frame_collapse.yml
examples/hello/: app.py  hello.yml
examples/listbox/: callbacks.py
examples/listboxes/: app.py  callbacks.py  listboxes.py  listboxes.yml
examples/mapbox/: colormap.py  draw.py  draw.yml  mapbox_example.py  mapbox_example.yml  mapbox_initialize.py  mapbox_map.py  mapbox_test.py  mapbox_token.txt  markers.py  markers.yml  mpbox.py  operations.py
examples/maplibre/: app.py  callbacks.py  map.py  maplibre_example.py  maplibre_example.yml
examples/menu_example/: app.py  callbacks.py  menu_example.yml
examples/openlayers/: calculator.yml  calculator_example.py  calculator_gui.py  openlayers.py  openlayers.yml  openlayers_test.py  operations.py
examples/parallel_execution/: calc.py  calculator.py  calculator.yml  operations.py
examples/popup_window/: app.py  callbacks_main_window.py  callbacks_popup_data.py  callbacks_popup_simple.py  main_window.yml  popup_data.yml  popup_simple.yml
examples/popupmenus/: app.py  callbacks.py  popupmenus.yml
examples/radiobutton/: app.py  callbacks.py  radiobutton.yml
examples/table/: app.py  callbacks.py  table.yml
examples/visualdelta/: Combinear.qss  mapbox_map.py  maps.py  operations.py  run_visualdelta.py  tipping_points.py  visualdelta.py  visualdelta.yml  visualdelta_test.py
examples/webpage/: webpage.py  webpage.yml  webpage_comparison.py  webpage_example.py  webpage_example.yml  wpc.py
old/mapbox/: circle_layer.py  mapbox_compare.py  marker_layer.py  polygon_layer.py  polygon_selector_layer.py  raster_from_tiles_layer.py  raster_layer.py
old/maplibre/: choropleth_layer.py  circle_selector_layer.py  draw_layer.py  geojson_layer.py.old  image_layer.py  layer.py  line_selector_layer.py  mapbox_compare.py  maplibre.py  marker_layer.py  polygon_layer.py  raster_layer.py  raster_tile_layer.py
ra2ceGUI/: Combinear.qss  RA2CEGUI.spec  mapbox_map.py  maps.py  operations.py  ra2ce.ini  ra2ceGUI.py  ra2ceGUI.yml  ra2ce_menu.py  run_ra2ceGUI.py  tipping_points.py
ra2ceGUI/floodmaps/: flood_withprot_slr=0.10m_rp=0100.tif  flood_withprot_slr=0.50m_rp=0100.tif  flood_withprot_slr=1.50m_rp=0100.tif  flood_withprot_slr=2.00m_rp=0100.tif
ra2ceGUI/operations/: operations.py
src/guitares/: dialog.py  (+14 more)
stylesheets/: Combinear.qss  Diffnes.qss
tests/: conftest.py  test_widgets.py
(+402 files in other folders)
